--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-nav-bar></app-nav-bar>
 <div class="container">
-  <app-home></app-home>
   <router-outlet />
+  <ngx-spinner></ngx-spinner>
 </div>
